--- a/ActiveRecord/ActiveRecord.tt
+++ b/ActiveRecord/ActiveRecord.tt
@@ -1,4 +1,4 @@
-<#@ include file="MySQL.ttinclude" #>
+<#@ include file="SQLServer.ttinclude" #>
 using System;
 using System.Collections.Generic;
 using System.Linq;
