--- a/ActiveRecord/Structs.tt
+++ b/ActiveRecord/Structs.tt
@@ -36,7 +36,7 @@ namespace <#=Namespace#> {
 	                IsNullable = <#=col.IsNullable.ToString().ToLower()#>,
 	                AutoIncrement = <#=col.AutoIncrement.ToString().ToLower()#>,
 	                IsForeignKey = <#=col.IsForeignKey.ToString().ToLower()#>,
-					IsComputed = <#=col.IsComputed.ToString().ToLower()#>,
+                    IsComputed = <#=col.IsComputed.ToString().ToLower()#>,
 	                MaxLength = <#=col.MaxLength#>,
 	                CleanName = "<#=col.CleanName#>"
                 });
@@ -58,8 +58,7 @@ namespace <#=Namespace#> {
 							AutoIncrement = <#=col.AutoIncrement.ToString().ToLower()#>,
 							IsForeignKey = <#=col.IsForeignKey.ToString().ToLower()#>,
 							IsComputed = <#=col.IsComputed.ToString().ToLower()#>,
-							MaxLength = <#=col.MaxLength#>,
-							IsReadOnly = <#=col.IsReadOnly.ToString().ToLower()#>
+							MaxLength = <#=col.MaxLength#>
 						};
 					}
 				}
